hwo do you make an img fit in another object and not the whole page :(

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title></title>
   </head>
   <body>
+    <div class="card">
+      <h3>Important Thing Buy It Now Please</h3>
+      <img src="mone.jpg" alt="" width="250">
+    </div>
   </body>
 </html>
