--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <title></title>
   </head>
   <body>
-    <div class="card">
-      <h3>Important Thing Buy It Now Please</h3>
-      <img src="mone.jpg" alt="" width="250">
+    <div class="container">
+      <div class="card">
+        <h3>1 Dollar Bill</h3>
+        <img class="card-img" src="mone.jpg" alt="" />
+        <div class="card-price">$3.00</div>
+      </div>
+      <div class="card">
+        <h3>Important Thing Buy It Now Please</h3>
+        <img class="card-img" src="mone.jpg" alt="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <h3>Important Thing Buy It Now Please</h3>
+        <img class="card-img" src="mone.jpg" alt="" />
+      </div>
     </div>
   </body>
 </html>
