yay i put the price on the bottom im so sigma

--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
   <body>
     <div class="container">
       <div class="card">
+        <a href="url">
+        <div class="card-price">$3.00</div>
+        </a>
         <h3>1 Dollar Bill</h3>
         <img class="card-img" src="mone.jpg" alt="" />
-        <div class="card-price">$3.00</div>
       </div>
       <div class="card">
-        <h3>Important Thing Buy It Now Please</h3>
+        <a href="url">
+        <div class="card-price">$2000</div>
+        </a>
+        <h3>Important Thing Buy It Now Please I Want Money Now</h3>
         <img class="card-img" src="mone.jpg" alt="" />
         <p></p>
       </div>
       <div class="card">
-        <h3>Important Thing Buy It Now Please</h3>
-        <img class="card-img" src="mone.jpg" alt="" />
+        <a href="url">
+        <div class="card-price">$99999.99</div>
+        </a>
+        <h3>Some Sorte Of,, Rareth Gemme</h3>
+        <img class="card-img" src="rcokandroller.jpeg" alt="" />
       </div>
     </div>
   </body>
