--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
   </head>
   <body>
+    <div class="containertainer">
     <div class="container">
       <div class="card">
         <a href="url">
@@ -29,6 +30,55 @@
         <h3>Some Sorte Of,, Rareth Gemme</h3>
         <img class="card-img" src="rcokandroller.jpeg" alt="" />
       </div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <a href="url">
+        <div class="card-price">$200</div>
+        </a>
+        <h3>Bike(Stolen)</h3>
+        <img class="card-img" src="bike.webp" alt="" />
+      </div>
+      <div class="card">
+        <a href="url">
+        <div class="card-price">$1499.99</div>
+        </a>
+        <h3>Bike(Legally Obtained From Walmart)</h3>
+        <img class="card-img" src="bikelegal.png" alt="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <a href="url">
+        <div class="card-price">Free I Guess?</div>
+        </a>
+        <h3>Weird Ugly Yellow Rock</h3>
+        <img class="card-img" src="yuck.png" alt="" />
+      </div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <a href="url">
+        <div class="card-price">$inf</div>
+        </a>
+        <h3>2 Dollar Bill</h3>
+        <img class="card-img" src="lifesavings.jpg" alt="" />
+      </div>
+      <div class="card">
+        <a href="url">
+        <div class="card-price">$40000</div>
+        </a>
+        <h3>My Ancestor's Ghost</h3>
+        <img class="card-img" src="ghtsott sgost.jpg" alt="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <a href="url">
+        <div class="card-price">Like $2.25</div>
+        </a>
+        <h3>Nuclear Codes</h3>
+        <img class="card-img" src="file.png" alt="" />
+      </div>
+    </div>
     </div>
   </body>
 </html>
