--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     <div class="containertainer">
     <div class="container">
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$3.00</div>
         </a>
         <h3>1 Dollar Bill</h3>
         <img class="card-img" src="mone.jpg" alt="" />
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$2000</div>
         </a>
-        <h3>Important Thing Buy It Now Please I Want Money Now</h3>
-        <img class="card-img" src="mone.jpg" alt="" />
-        <p></p>
+        <h3>Literally Nothing(Pls buy i want money now pls)</h3>
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$99999.99</div>
         </a>
         <h3>Some Sorte Of,, Rareth Gemme</h3>
@@ -33,14 +31,14 @@
     </div>
     <div class="container">
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$200</div>
         </a>
         <h3>Bike(Stolen)</h3>
         <img class="card-img" src="bike.webp" alt="" />
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$1499.99</div>
         </a>
         <h3>Bike(Legally Obtained From Walmart)</h3>
@@ -48,7 +46,7 @@
         <p></p>
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">Free I Guess?</div>
         </a>
         <h3>Weird Ugly Yellow Rock</h3>
@@ -57,14 +55,14 @@
     </div>
     <div class="container">
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$inf</div>
         </a>
         <h3>2 Dollar Bill</h3>
         <img class="card-img" src="lifesavings.jpg" alt="" />
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">$40000</div>
         </a>
         <h3>My Ancestor's Ghost</h3>
@@ -72,7 +70,7 @@
         <p></p>
       </div>
       <div class="card">
-        <a href="url">
+        <a href="https://www.google.com/search?q=how+to+pick+up+a+blue+chair&rlz=1C1GCEA_enUS1179US1179&oq=how+to+pick+up+a+blue+chair&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIICAMQABgWGB4yBwgEEAAY7wUyBwgFEAAY7wUyBwgGEAAY7wXSAQkyNDc4MmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8">
         <div class="card-price">Like $2.25</div>
         </a>
         <h3>Nuclear Codes</h3>
