and a header too

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Sigma Shop Buy Things Now Please I Want Money Now</h1>
     <div class="containertainer">
     <div class="container">
       <div class="card">
